 * History from persistent group chats is now displayed as such and does not trigger events. (#6787)
 * Group chats which are not anonymous now display the actual contact in the user list. (#11841)
 * Fixed receiving colors and fonts from iChat. (#1323)
 * Enabled support for custom emoticons as an account option defaulting to on.
 * Fixed joining a group chat from an xmpp URL. (#11785)

MSN
 * Possibly fixed a crash on connect. (#11508)
 * Fixes setting account-specific display names (only the global display name would be set).
 * Enabled server-side storing of contact aliases. (#11802)
 * Fixed displaying what message was unable to be sent when an error occurs. (#11796)
 * Moved the "display custom emoticons" to an account preference from the advanced preferences window.

AIM, ICQ, and MobileMe
 * Added a preference to always use the AOL proxy server for file transfers and direct IM. (#11413)
 * Added a preference to use SSL for connections. (#9553) You can get information on the certificate by right-clicking the account in the Accounts preferences.
 
MySpace IM
 * Added support for msim links. (#8036)

Miscellaneous
 * You can now define which applications should be the default for different services in the Advanced preferences. (#158)
 * The about box credits are now scrollable. (#9967)
 * The unread count is now cleared when clearing the display. (#10605)
 * Error and information display windows no longer exceed their maximum height, and take focus when opening. (#11793).
 * Possibly fixed support for a PAC proxy server. (#224, #11364)
 * Disabled the "Show # recent messages in new chats" option when "Log messages" is off. (#11359)
 * Menu items such as “Show Offline Contacts” now always use the “Show” verb, with a checkbox indicating that they're currently shown. Previous versions indicated that by changing the verb to “Hide”. #4740.
 * Add "Contact went mobile" and "Contact returns from mobile" events. (#3248)